// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildFlags > hdr_pq_4k: produces correct flags for yt-4k-hdr-h265 1`] = `
[
  "-i",
  "/sandbox/user1/hdr_input.mp4",
  "-movflags",
  "+faststart",
  "-avoid_negative_ts",
  "make_zero",
  "-fflags",
  "+genpts",
  "-video_track_timescale",
  "90000",
  "-g",
  "60",
  "-keyint_min",
  "60",
  "-c:a",
  "aac",
  "-ar",
  "48000",
  "-ac",
  "2",
  "-b:a",
  "192k",
  "-vf",
  "scale=3840:2160:force_original_aspect_ratio=decrease,pad=3840:2160:(ow-iw)/2:(oh-ih)/2",
  "-c:v",
  "libx265",
  "-pix_fmt",
  "yuv420p10le",
  "-profile:v",
  "main10",
  "-crf",
  "18",
  "-maxrate",
  "40M",
  "-bufsize",
  "80M",
  "-color_primaries",
  "bt2020",
  "-color_trc",
  "smpte2084",
  "-colorspace",
  "bt2020nc",
  "-x265-params",
  "open-gop=0:scenecut=0",
  "-progress",
  "pipe:2",
  "-y",
  "/sandbox/user1/hdr_output.mp4",
]
`;

exports[`buildFlags > sdr_1080p: produces correct flags for yt-1080p-h264 1`] = `
[
  "-i",
  "/sandbox/user1/input.mp4",
  "-movflags",
  "+faststart",
  "-avoid_negative_ts",
  "make_zero",
  "-fflags",
  "+genpts",
  "-video_track_timescale",
  "90000",
  "-g",
  "60",
  "-keyint_min",
  "60",
  "-c:a",
  "aac",
  "-ar",
  "48000",
  "-ac",
  "2",
  "-b:a",
  "192k",
  "-vf",
  "scale=1920:1080:force_original_aspect_ratio=decrease,pad=1920:1080:(ow-iw)/2:(oh-ih)/2",
  "-c:v",
  "libx264",
  "-pix_fmt",
  "yuv420p",
  "-profile:v",
  "high",
  "-crf",
  "18",
  "-maxrate",
  "12M",
  "-bufsize",
  "24M",
  "-x264-params",
  "keyint=60:min-keyint=60:scenecut=0",
  "-progress",
  "pipe:2",
  "-y",
  "/sandbox/user1/output.mp4",
]
`;

exports[`buildFlags > shorts_sdr_1080x1920: produces correct flags for yt-shorts-h264 1`] = `
[
  "-i",
  "/sandbox/user1/short.mp4",
  "-movflags",
  "+faststart",
  "-avoid_negative_ts",
  "make_zero",
  "-fflags",
  "+genpts",
  "-video_track_timescale",
  "90000",
  "-g",
  "60",
  "-keyint_min",
  "60",
  "-c:a",
  "aac",
  "-ar",
  "48000",
  "-ac",
  "2",
  "-b:a",
  "192k",
  "-vf",
  "scale=1080:1920:force_original_aspect_ratio=decrease,pad=1080:1920:(ow-iw)/2:(oh-ih)/2",
  "-c:v",
  "libx264",
  "-pix_fmt",
  "yuv420p",
  "-profile:v",
  "high",
  "-crf",
  "18",
  "-maxrate",
  "12M",
  "-bufsize",
  "24M",
  "-x264-params",
  "keyint=60:min-keyint=60:scenecut=0",
  "-progress",
  "pipe:2",
  "-y",
  "/sandbox/user1/short_out.mp4",
]
`;
